--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "",
   "version": "",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "js-sha256": "^0.9.0",
+    "nano-time": "^1.0.0"
   }
 }
