--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "",
   "dependencies": {
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "js-sha256": "^0.9.0",
     "nano-time": "^1.0.0"
   }
