--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "fs": "0.0.1-security",
     "js-sha256": "^0.9.0",
     "nano-time": "^1.0.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
